--- a/pom.xml
+++ b/pom.xml
@@ -11,11 +11,12 @@
     <name>demo</name>
     <description>Demo project for Spring Boot</description>
 
+    <!--springboot 版本-->
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.0.4.RELEASE</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <version>2.1.1.RELEASE</version>
+        <relativePath/>
     </parent>
 
     <properties>
