重构工具类

--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,12 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+    <!--读取配置文件中的属性。不加IDEA会提示一个东西。虽然不加也不影响代码-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
+        </dependency>
 
         <!-- google java lib -->
         <dependency>
